--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -47,7 +47,7 @@ layout: base-without-header.njk
 </header>
 {%- set contentWithoutHtml = content.replace(r/<\/?[a-z0-9]+\b[^>]*>/g, "") -%}
 {%- if contentWithoutHtml.length > 3000 -%}
-	<aside class="[ toc-container ][ flow content-width ]">
+	<aside class="[ toc-container ][ flow content-width ]" data-pagefind-ignore>
 		<details>
 			<summary class="[ flex ]">
 				<sl-icon class="[ icon ]" library="fa" name="fas-play" label=""></sl-icon>
@@ -61,7 +61,7 @@ layout: base-without-header.njk
 	{{ content | safe }}
 </article>
 {%- if backlinks === [] -%}
-	<aside class="[ flow content-width ]">
+	<aside class="[ flow content-width ]" data-pagefind-ignore>
 		<h2>Backlinks</h2>
 		<ul class="[ flow ]">
 			{%- for link in backlinks -%}
@@ -80,7 +80,7 @@ layout: base-without-header.njk
 		</ul>
 	</aside>
 {%- endif -%}
-<footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);">
+<footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);" data-pagefind-ignore>
 	<div class="[ share ]">
 		<p>
 			<sl-icon class="[ icon ]" library="fa" name="fas-share-from-square" label=""></sl-icon> Share on <a href='https://toot.kytta.dev/?text="{{ title }}" by @ellyloel@front-end.social {{ metadata.url }}{{ page.url }}' class="[ text-decoration-none move-link-styling-to-child ]">
