--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -33,7 +33,7 @@
 			<script type="module" src="/assets/js/model-viewer.js" defer></script>
 			<script type="module" src="/assets/js/spotify.js" defer></script>
 		{%- endif -%}
-		{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/bookmarks/" or page.url === "/til/" or page.url === "/til/d3/" -%}
+		{%- if page.url === "/garden/" or page.url === "/blog/" or page.url === "/projects/" or page.url === "/til/" or page.url === "/til/d3/" -%}
 			<script type="module" src="/assets/js/graph.js" defer></script>
 		{%- endif -%}
 		{%- if page.url === "/search/" -%}
