--- a/src/content/root/feeds/bookmarks.atom.njk
+++ b/src/content/root/feeds/bookmarks.atom.njk
@@ -7,20 +7,22 @@ permalink: "/bookmarks.atom"
 	<subtitle>{{ metadata.description }}</subtitle>
 	<link href="{{ '/bookmarks.atom' | absoluteUrl(metadata.url) }}" rel="self"/>
 	<link href="{{ metadata.url }}"/>
-	<updated>{{ collections.bookmarks | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
+	<updated>{{ bookmarks.newestItemDate | dateToRfc3339 }}</updated>
 	<id>{{ metadata.url }}</id>
 	<author>
 		<name>{{ metadata.author.name }}</name>
 		<email>{{ metadata.author.email }}</email>
 	</author>
-	{%- for post in collections.bookmarks | reverse %}
-		{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
+	{%- for bookmark in bookmarks.items %}
 		<entry>
-			<title>{{ post.data.title }}</title>
-			<link href="{{ absolutePostUrl }}"/>
-			<updated>{{ post.date | dateToRfc3339 }}</updated>
-			<id>{{ absolutePostUrl }}</id>
-			<content xml:lang="{{ metadata.lang }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
+			<title>{{ bookmark.title }}</title>
+			<link href="{{ bookmark.link }}"/>
+			<published>{{ bookmark.created | dateObj | dateToRfc3339 }}</published>
+			{%- if bookmark.lastUpdate -%}
+				<updated>{{ bookmark.lastUpdate | dateObj | dateToRfc3339 }}</updated>
+			{%- endif -%}
+			<id>{{ bookmark.link }}</id>
+			<content xml:lang="{{ metadata.lang }}" type="html">{{ bookmark.excerpt }}</content>
 		</entry>
 	{%- endfor %}
 </feed>
