✨ feat: removing dribbble link and adding ama link

--- a/src/content/index.njk
+++ b/src/content/index.njk
@@ -107,9 +107,9 @@ eleventyImport:
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/linkedin" class="[ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ icon ]" library="fa" name="fab-linkedin"></sl-icon>
-						<span>LinkedIn</span>
+					<a href="https://elly.to/ama" class="[ text-decoration-none move-link-styling-to-child ]">
+						<sl-icon class="[ icon ]" library="fa" name="far-circle-question"></sl-icon>
+						<span>Ask me anything</span>
 					</a>
 				</li>
 				<li>
@@ -119,9 +119,9 @@ eleventyImport:
 					</a>
 				</li>
 				<li>
-					<a href="https://elly.to/dribbble" class="[ text-decoration-none move-link-styling-to-child ]">
-						<sl-icon class="[ icon ]" library="fa" name="fab-dribbble"></sl-icon>
-						<span>Dribble</span>
+					<a href="https://elly.to/linkedin" class="[ text-decoration-none move-link-styling-to-child ]">
+						<sl-icon class="[ icon ]" library="fa" name="fab-linkedin"></sl-icon>
+						<span>LinkedIn</span>
 					</a>
 				</li>
 			</ul>
