--- a/src/_includes/webmentions-facepile.njk
+++ b/src/_includes/webmentions-facepile.njk
@@ -1,7 +1,7 @@
 <div class="[ facepile ]">
-	<h3>
+	<p class="[ h3 ]">
 		{{ facepileMentionsHeading }}
-	</h3>
+	</p>
 	{% for facepileMention in facepileMentions %}
 		<a href="{{ facepileMention.author.url }}" class="[ face-link ]">
 			<sl-avatar
