🐛 fix: styling comments summary like a heading

--- a/src/_includes/webmentions.njk
+++ b/src/_includes/webmentions.njk
@@ -28,7 +28,7 @@
 	{%- endif -%}
 	{%- if postMentions.comments.length -%}
 		<details {% if page.url !== "/" %}open{% endif %}>
-			<summary>
+			<summary class="[ h3 ]">
 				{%- if postMentions.comments.length === 1 -%}
 					{{ postMentions.comments.length }} Comment
 					{%- elif (postMentions.comments.length > 1) -%}
