--- a/src/assets/css/blocks/webmentions.css
+++ b/src/assets/css/blocks/webmentions.css
@@ -57,7 +57,7 @@
 		flex-wrap: wrap;
 		margin-left: calc((var(--border-size-3) * -1) + var(--size-3));
 
-		& h3 {
+		& .h3 {
 			margin-left: calc((var(--size-3) * -1) + var(--border-size-3));
 			margin-right: calc(var(--size-3) + var(--size-2));
 		}
