--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -30,6 +30,7 @@
 @import url("./utilities/wrapper.css") layer(utilities);
 
 /* Blocks */
+@import url("./blocks/badge.css") layer(blocks);
 @import url("./blocks/breadcrumb.css") layer(blocks);
 @import url("./blocks/button.css") layer(blocks);
 @import url("./blocks/callout.css") layer(blocks);
