--- a/src/content/garden.njk
+++ b/src/content/garden.njk
@@ -54,17 +54,17 @@ eleventyImport:
   <sl-option value="seedling">
     <sl-icon slot="prefix" class="[ icon ]" library="fa" name="fas-seedling"></sl-icon>
     Seedling
-    <sl-badge slot="suffix" variant="neutral" pill>{{ seedlingCount }}</sl-badge>
+    <span slot="suffix" class="[ badge ][ neutral pill ]">{{ seedlingCount }}</span>
   </sl-option>
   <sl-option value="budding">
     <sl-icon slot="prefix" class="[ icon ]" library="fa" name="fas-spa"></sl-icon>
     Budding
-    <sl-badge slot="suffix" variant="neutral" pill>{{ buddingCount }}</sl-badge>
+    <span slot="suffix" class="[ badge ][ neutral pill ]">{{ buddingCount }}</span>
   </sl-option>
   <sl-option value="evergreen">
     <sl-icon slot="prefix" class="[ icon ]" library="fa" name="fas-tree"></sl-icon>
     Evergreen
-    <sl-badge slot="suffix" variant="neutral" pill>{{ evergreenCount }}</sl-badge>
+    <span slot="suffix" class="[ badge ][ neutral pill ]">{{ evergreenCount }}</span>
   </sl-option>
 </sl-select>
 
