✨ feat: adding mastodon page

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -334,9 +334,10 @@ figure {
 	}
 }
 
-/* Picture */
+/* Picture and video */
 
-picture .image {
+picture .image,
+video {
 	border-radius: var(--radius-2);
 }
 
