🧹 chore: moving root level pages into a pages dir for tidiness

--- a/src/content/pages/og.njk
+++ b/src/content/pages/og.njk
@@ -4,7 +4,7 @@ pagination:
   data: collections.all
   size: 1
   alias: ogPost
-permalink: "og/{{ ogPost.data.page.url }}/"
+permalink: "/og/{{ ogPost.data.page.url }}/"
 ---
 
 <h1>
