--- a/src/content/api/graph.json.njk
+++ b/src/content/api/graph.json.njk
@@ -1,5 +1,5 @@
 ---
 eleventyExcludeFromCollections: true
-permalink: '/api/graph.json'
+permalink: 'api/graph.json'
 ---
 {{ collections.allPostTypes | linkGraph | dump | safe }}
