--- a/src/content/root/build.njk
+++ b/src/content/root/build.njk
@@ -1,5 +1,5 @@
 ---
-permalink: "/build.txt"
+permalink: "build.txt"
 ---
 LAST BUILD: {{ build.timestamp | dateToRfc3339 }} 
 ENV:        {{ build.env }}
