--- a/src/content/root/feeds/articles.rss.njk
+++ b/src/content/root/feeds/articles.rss.njk
@@ -1,5 +1,5 @@
 ---
-permalink: "/articles.rss"
+permalink: "articles.rss"
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xml:base="{{ metadata.url }}" xmlns:atom="http://www.w3.org/2005/Atom">
