--- a/src/content/root/feeds/notes.atom.njk
+++ b/src/content/root/feeds/notes.atom.njk
@@ -1,5 +1,5 @@
 ---
-permalink: "/notes.atom"
+permalink: "notes.atom"
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.url }}">
