✨ feat: switching out feed item shortcode for feed item partial

--- a/src/assets/css/blocks/badge.css
+++ b/src/assets/css/blocks/badge.css
@@ -9,6 +9,7 @@
 	font-weight: var(--font-weight-body-bold);
 	justify-content: center;
 	line-height: 1;
+	margin: 0;
 	padding: 0.35em 0.6em;
 	white-space: nowrap;
 
