--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -6,41 +6,38 @@ layout: base-without-header.njk
 	<h1>{{ title }}</h1>
 	<div class="[ flex gap-3 flex-wrap ]">
 		{%- if created -%}
-			<span>
-				<sl-tooltip content="Created {{ created | dateToLocaleDateFull }}">
-					<span class="[ flex align-center gap-1ch ]">
-						<sl-icon class="[ icon ]" library="fa" name="far-calendar" label="Last modified"></sl-icon>
-						<sl-relative-time class="[ date ]" date="{{ created | dateToISO }}"></sl-relative-time>
-					</span>
-				</sl-tooltip>
-			</span>
+			{%- set date = created -%}
+			{%- set label = "Created" -%}
+			{%- include "date.njk" -%}
+			<span aria-hidden="true">•</span>
 		{%- endif -%}
 		{%- if modified -%}
-			<span>
-				<sl-tooltip content="Last modified {{ modified | dateToLocaleDateFull }}">
-					<span class="[ flex align-center gap-1ch ]">
-						<sl-icon class="[ icon ]" library="fa" name="far-calendar-plus" label="Last modified"></sl-icon>
-						<sl-relative-time class="[ date ]" date="{{ modified | dateToISO }}"></sl-relative-time>
-					</span>
-				</sl-tooltip>
-			</span>
+			{%- set date = modified -%}
+			{%- set label = "Last modified" -%}
+			{%- include "date.njk" -%}
+			<span aria-hidden="true">•</span>
 		{%- endif -%}
 		{%- if not created and not modified -%}
-			<span>
-				<sl-tooltip content="Last modified {{ page.date | dateToLocaleDateFull }}">
-					<span class="[ flex align-center gap-1ch ]">
-						<sl-icon class="[ icon ]" library="fa" name="far-calendar-plus" label="Last modified"></sl-icon>
-						<sl-relative-time class="[ date ]" date="{{ page.date | dateToISO }}"></sl-relative-time>
-					</span>
-				</sl-tooltip>
-			</span>
+			{%- set date = page.date -%}
+			{%- set label = "Last modified" -%}
+			{%- include "date.njk" -%}
+			<span aria-hidden="true">•</span>
 		{%- endif -%}
 		{%- if stage -%}
 			<span>
 				<sl-tooltip content="Stage">
-					<sl-icon class="[ icon ]" library="fa" name="fas-{%- if stage === "seedling" -%}seedling{%- elif stage === "budding" -%}spa{%- elif stage === "evergreen" -%}tree{%- elif stage === "draft" -%}file-pen{%- elif stage === "complete" -%}circle-check{%- endif -%}" label="stage"></sl-icon>
+					<sl-icon class="[ icon ]" library="fa" name="fas-{%- if stage === "seedling" -%}seedling{%- elif stage === "budding" -%}spa{%- elif stage === "evergreen" -%}tree{%- elif stage === "draft" -%}file-pen{%- elif stage === "complete" -%}circle-check{%- endif -%}" label="Stage"></sl-icon>
 				</sl-tooltip>
 				<span>{{ stage | capitalize }}</span>
+			</span>
+			<span aria-hidden="true">•</span>
+		{%- endif -%}
+		{%- if tags -%}
+			<span class="[ flex align-center gap-1 ]">
+				<sl-tooltip content="Tags">
+					<sl-icon class="[ icon ]" library="fa" name="fas-tag" label="Tags"></sl-icon>
+				</sl-tooltip>
+				{%- include "tags.njk" -%}
 			</span>
 		{%- endif -%}
 	</div>
@@ -92,8 +89,8 @@ layout: base-without-header.njk
 				<span>LinkedIn</span></a>.
 		</p>
 	</div>
-	{%- set previousPost = collections.allPostTypes | getPreviousCollectionItem -%}
-	{%- set nextPost = collections.allPostTypes | getNextCollectionItem -%}
+	{%- set previousPost = collections.allSortedByDate | getPreviousCollectionItem -%}
+	{%- set nextPost = collections.allSortedByDate | getNextCollectionItem -%}
 	{%- if previousPost or nextPost -%}
 		<div class="[ post-pagination ][ flex gap-5 ]">
 			{%- if previousPost -%}
