--- a/src/content/pages/til.njk
+++ b/src/content/pages/til.njk
@@ -16,15 +16,25 @@ eleventyImport:
 </h2>
 <div id="graph"></div>
 
-{% set til = collections.til | sortByCreated %}
+{% set til = collections.TILSortedByDate %}
 <ul class="[ feed ]">
-  {%- for post in til %}
-    {% feedItem
-    title = post.data.title,
-    url = post.url,
-    excerpt = post.data.page.excerpt,
-    image = post.data.image,
-    created = post.data.created
- %}
-  {%- endfor %}
+	{%- for post in til %}
+		{%- set title = post.data.title -%}
+		{%- set url = post.url -%}
+		{%- if post.data.image -%}
+			{%- setAsync "imageMarkup" -%}
+			{%- image post.data.image, "" -%}
+			{%- endsetAsync -%}
+		{%- endif -%}
+		{# {%- set body = post.data.page.excerpt -%} #}
+		{%- set date = post.data.date -%}
+		{%- set label = "" -%}
+		{%- if post.data.modified -%}
+			{%- set label = "Last modified" -%}
+		{%- elif post.data.created -%}
+			{%- set label = "Created" -%}
+		{%- endif -%}
+		{%- set tags = post.data.tags -%}
+		{%- include "feedItem.njk" -%}
+	{%- endfor %}
 </ul>
