--- a/src/content/root/feeds/feed.atom.njk
+++ b/src/content/root/feeds/feed.atom.njk
@@ -7,13 +7,13 @@ permalink: "feed.atom"
 	<subtitle>{{ metadata.description }}</subtitle>
 	<link href="{{ '/feed.atom' | absoluteUrl(metadata.url) }}" rel="self"/>
 	<link href="{{ metadata.url }}"/>
-	<updated>{{ collections.allPostTypes | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
+	<updated>{{ collections.allSortedByDate | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
 	<id>{{ metadata.url }}</id>
 	<author>
 		<name>{{ metadata.author.name }}</name>
 		<email>{{ metadata.author.email }}</email>
 	</author>
-	{%- for post in collections.allPostTypes | reverse %}
+	{%- for post in collections.allSortedByDate | reverse %}
 		{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
 		<entry>
 			<title>{{ post.data.title }}</title>
