🐛 fix: fixing feed image issue

--- a/src/content/pages/blog.njk
+++ b/src/content/pages/blog.njk
@@ -53,6 +53,7 @@ eleventyImport:
 		{%- endif -%}
 		{%- set title = post.data.title -%}
 		{%- set url = post.url -%}
+		{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
 		{%- if post.data.image -%}
 			{%- setAsync "imageMarkup" -%}
 			{%- image post.data.image, "" -%}
