--- a/src/content/pages/bookmarks.njk
+++ b/src/content/pages/bookmarks.njk
@@ -18,9 +18,10 @@ eleventyImport:
 	{%- for bookmark in bookmarks.items -%}
 		{%- set title = bookmark.title -%}
 		{%- set url = "./" + bookmark.title | slugify + "/" -%}
-		{%- if bookmark.cover -%}
+		{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
+		{%- if bookmark.image -%}
 			{%- setAsync "imageMarkup" -%}
-			{%- image bookmark.cover, "" -%}
+			{%- image bookmark.image, "" -%}
 			{%- endsetAsync -%}
 		{%- endif -%}
 		{%- set created = bookmark.created -%}
