--- a/src/content/pages/til.njk
+++ b/src/content/pages/til.njk
@@ -21,6 +21,7 @@ eleventyImport:
 	{%- for post in til %}
 		{%- set title = post.data.title -%}
 		{%- set url = post.url -%}
+		{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
 		{%- if post.data.image -%}
 			{%- setAsync "imageMarkup" -%}
 			{%- image post.data.image, "" -%}
