--- a/src/content/pages/garden.njk
+++ b/src/content/pages/garden.njk
@@ -59,6 +59,7 @@ eleventyImport:
 		{%- endif -%}
 		{%- set title = note.data.title -%}
 		{%- set url = note.url -%}
+		{%- setAsync "imageMarkup" -%}{%- endsetAsync -%}
 		{%- if note.data.image -%}
 			{%- setAsync "imageMarkup" -%}
 			{%- image note.data.image, "" -%}
