🐛 fix: fixing social links overflowing at small screen sizes

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -46,7 +46,7 @@
 				</ul>
 			</div>
 
-			<ul role="list" class="[ social-links ]">
+			<ul role="list" class="[ social-links ][ flex-wrap ]">
 				<li>
 					<sl-tooltip content="Elly">
 						<sl-icon-button class="[ logo-link ]" src="/assets/svg/elly.svg" label="to homepage" href="/"{% if page.url === "/" %} aria-current="page"{% endif %}></sl-icon-button>
