✨ feat: switching to postcss and rollup from vite

--- a/src/_includes/meta.njk
+++ b/src/_includes/meta.njk
@@ -39,7 +39,7 @@
 <link rel="icon" href="/assets/img/icons/favicon.ico" sizes="any">
 <link rel="icon" href="/assets/img/icons/favicon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/assets/img/icons/apple-touch-icon.png">
-<link rel="manifest" href="/assets/manifest.webmanifest">
+<link rel="manifest" href="/manifest.webmanifest">
 
 {# RSS Feed #}
 <link type="application/atom+xml" rel="alternate" href="{{ metadata.url }}/feed.atom" title="{{ metadata.title }}">
