--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -3,6 +3,7 @@ layout: base-without-header
 title: Home
 description: Hi, I’m Elly. I like creating delightful, magical, and accessible art with code.
 permalink: "/"
+eleventyExcludeFromCollections: true
 eleventyImport:
   collections: ["allSortedByDate"]
 ---
